--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    /* colors */
+    --clr-light: #fafafa;
+    --clr-dark: #1a1a1a;
+    --clr-accent:  #FEE715;
+    --clr-main: #1f1f1f;
+    /* desktop font sizes */
+    --fs-h1: 4.5rem;
+    --fs-h2: 3.75rem;
+    --fs-h3: 1.5rem;
+    --fs-body: 1.125rem;
+}
+
+html {
+    scroll-behavior: smooth;
+    background-color: var(--clr-dark);
+}
+
+.App {
+    font-family: 'DM Sans', sans-serif;
+}
+
+body {
+    margin: 0;
+    line-height: 1.3;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+@media (max-width: 1000px) {
+    :root {
+        /* mobile font sizes smaller */
+        --fs-h1: 3rem;
+        --fs-h2: 2.25rem;
+        --fs-h3: 1.25rem;
+        --fs-body: 1rem;
+    }
 }
