--- a/src/Components/ShortExperience/short_experience.css
+++ b/src/Components/ShortExperience/short_experience.css
@@ -1,53 +1,40 @@
-.ornament {
-    width: 25%;
-    height: 2px;
-    margin: .5em auto 1.5em;
-    background-color: var(--clr-light);
-    opacity: .75;
-}
-
-.exp_list {
-    display: flex;
-    max-width: 1000px;
-    margin: 1em 0;
-}
-
 #experience {
+    background-color: var(--clr-main);
+}
+
+.short_tile {
     display: flex;
-    color: var(--clr-light);
     flex-direction: column;
     align-items: center;
-    padding-bottom: 1em;
+    padding: 1em 0;
     width: 100%;
-    background-color: var(--clr-dark);
 }
 
-.exp {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 2em;
-    width: 20em;
+.short_grid {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: 2fr 1fr 1fr;
+    margin: 2em 0;
 }
 
-.exp img {
-    height: 3.5em;
-    margin-bottom: 1em;
-}
-
-.exp_desc {
+.short_item {
+    width: 10em;
     text-align: center;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em 2em;
 }
 
-.exp_org {
-    font-size: var(--fs-body);
-    margin: 1em 0;
+.short_img {
+    width: 7em;
+    margin: auto !important;
 }
 
 /* on mobile, make exp list a column */
 @media (max-width: 1000px) {
-    .exp_list {
+    .short_grid {
+        display: flex;
         flex-direction: column;
     }
 }
