--- a/src/Components/ExperiencePage/experience_page.css
+++ b/src/Components/ExperiencePage/experience_page.css
@@ -3,10 +3,6 @@
     padding-top: 3em;
 }
 
-#exp_title {
-    margin: auto;
-}
-
 #exp_grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 3fr;
@@ -14,20 +10,15 @@
     grid-auto-flow: row;
 }
 
-#exp_grid * {
+#exp_grid > * {
     background-color: var(--clr-dark);
     margin: 1em 0;
     padding: 1.5em;
 }
 
 .exp_img {
-    height: 8em;
-    box-shadow: 0 0 0 100px var(--clr-dark);
-    clip-path: inset(0 -100vmax 0 0); 
-}
-
-.exp_part {
-    z-index: 1;
+    max-height: 8em;
+    margin: auto !important;
 }
 
 @media (max-width: 1000px) {
@@ -38,7 +29,6 @@
 
     .exp_img {
         height: auto;
-        box-shadow: none;
     }
 
     #exp_grid * {
