add codecraft works, open-souce club, and flmnh to experience. add date ranges to experience. add boolean so some experience doesn't show on homepage. reorder experience in reverse chronological order of start date

--- a/src/Components/ExperiencePage/experience_page.css
+++ b/src/Components/ExperiencePage/experience_page.css
@@ -5,7 +5,7 @@
 
 #exp_grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 3fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 3fr;
     padding: 0 7em 5em;
     grid-auto-flow: row;
 }
