Adjust colors of HomePage sections to be alternating.

--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     color: var(--clr-light);
-    background-color: var(--clr-dark);
+    background-color: var(--clr-main);
     padding-bottom: 3em;
 }
 
